--- a/index.css
+++ b/index.css
@@ -305,13 +305,15 @@ border: 4px solid #ededed;
 box-shadow: 0 2px 25px rgba(0,0,0,0.2);
 }
 ul.thumbnails{
-/* margin: 0 auto; */
-display: flex;
-
-
+  margin: 0px 0px 25px 0px;
+  display: flex;
+  flex-direction: row;
+  padding: 100px;
+}
 }
 ul.thumbnails li {
 margin: 0 15px;
+padding: 10px;
 }
 ul.thumbnails li a img{
 border: 4px solid #ededed;
