--- a/index.css
+++ b/index.css
@@ -32,9 +32,7 @@ a:hover {
     text-decoration: underline;
 }
 
-.logo a:hover {
-    text-decoration: none;
-}
+
 
 .menu li {
     font-size: 16px;
@@ -42,10 +40,6 @@ a:hover {
     white-space: nowrap;
 }
 
-.logo a,
-.toggle a {
-    font-size: 20px;
-}
 
 .button.secondary {
     border-bottom: 1px #444 solid;
@@ -196,15 +190,18 @@ a:hover {
     flex: 1;
     display: flex;
     align-items: center;
+    
 }
 
 .right img {
-    width: 100%;
+    width: 80%;
+    float: right;
+
 }
 
 .left {
     max-width: 45%;
-    padding: 40px 64px;
+    padding: 40px 100px;
 }
 
 .right {
@@ -315,9 +312,17 @@ img:hover {
     height: 140%;
 }
 
-.le {
-    max-width: 40%;
-    padding: 40px 64px;
+.right1 img {
+    width: 80%;
+    float: right;
+    border: 10px solid #ededed;
+    box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 30%;
+
+}
+
+.right1 {
+    padding: 40px 48px;
 }
 
 .image-gallery {
@@ -338,8 +343,9 @@ ul.thumbnails {
     margin: 0px 0px 25px 0px;
     display: flex;
     flex-direction: row;
-    padding: 100px;
-    justify-content: center;
+    padding: 60px;
+   
+    
 }
 
 ul.thumbnails li {
@@ -348,7 +354,7 @@ ul.thumbnails li {
 }
 
 ul.thumbnails li a img {
-    border: 4px solid #ededed;
+    border: 10px solid #ededed;
     box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
     max-width: 140px;
     border-radius: 30%;
@@ -369,73 +375,11 @@ ul.thumbnails li a img {
     --m-1: 1rem;
 }
 
-.text_1 {
-    animation: text1;
-}
-
-.text_2 {
-    animation: text2;
-}
-
-.text_1,
-.text_2 {
-    overflow: hidden;
-    white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    animation-duration: 20s;
-    animation-timing-function: steps(10, end);
-    animation-iteration-count: infinite;
-    color: rgb(106, 6, 236)
-}
-
-.text_1::after,
-.text_2::after {
-    content: "|";
-    position: absolute;
-    right: 0;
-    animation-timing-function: steps(1, end);
-}
-
-@keyframes text2 {
-    0%,
-    50%,
-    100% {
-        width: 0;
-    }
-    60%,
-    90% {
-        width: 17em;
-    }
-}
-
-@keyframes text1 {
-    0%,
-    50%,
-    100% {
-        width: 0;
-    }
-    10%,
-    40% {
-        width: 17em;
-    }
-}
-
-@keyframes caret {
-    0%,
-    100% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-}
-
 .job {
+    
     display: flex;
     height: 100vh;
-    min-height: 100vh;
-}
+    }
 
 .job .profile-area {
     display: flex;
@@ -500,8 +444,9 @@ ul.thumbnails li a img {
     overflow: hidden;
 }
 
-.job .intro {
+  .job .intro {
     max-width: 500px;
+    margin-left: 160px;
 }
 
 .job .intro img {
@@ -520,13 +465,13 @@ ul.thumbnails li a img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /*padding: 0 5rem;*/
-    margin-left: 200px;
+    padding: 70px;
+    margin-left: 70px;
     text-align: right;
 }
 
 .about-right h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     text-transform: uppercase;
 }
 
@@ -535,7 +480,8 @@ ul.thumbnails li a img {
 }
 
 .about-right h2 {
-    font-weight: 650;
+    font-size: 3rem;
+    font-weight: 550;
 }
 
 .about-btns {
@@ -547,11 +493,11 @@ ul.thumbnails li a img {
     border: none;
     font-size: 0.9rem;
     text-transform: uppercase;
-    border: 2px solid #000;
+    border: 4px solid #000;
     border-radius: 20px;
     padding: 0.55rem 0;
-    width: 130px;
-    font-weight: 600;
+    width: 160px;
+    font-weight: 700;
     background: transparent;
     margin: 0 0.5rem;
     cursor: pointer;
@@ -590,12 +536,75 @@ ul.thumbnails li a img {
 }
 
 .job .container1 {
-    margin-left: 80px;
+    margin-left: 100px;
     margin-top: 50px;
 }
 
 
 /* ------------- opportunity page end -------------- */
+
+/* ------------- collabration page end -------------- */
+@-webkit-keyframes scroll {
+    0% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+    100% {
+      -webkit-transform: translateX(calc(-250px * 7));
+      transform: translateX(calc(-250px * 7));
+    }
+  }
+  @keyframes scroll {
+    0% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+    100% {
+      -webkit-transform: translateX(calc(-250px * 7));
+      transform: translateX(calc(-250px * 7));
+    }
+  }
+.slider2 {
+    background: pr;
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+    height: 100px;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    width: 1260px;
+  }
+  .slider2::before,
+  .slider2::after {
+    background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+    content: "";
+    height: 100px;
+    position: absolute;
+    width:100px;
+    z-index: 2;
+  }
+  .slider2::after {
+    right: 0;
+    top: 0;
+    -webkit-transform: rotateZ(180deg);
+    transform: rotateZ(180deg);
+  }
+  .slider2::before {
+    left: 0;
+    top: 0;
+  }
+  .slider2 .slide-track {
+    -webkit-animation: scroll 40s linear infinite;
+    animation: scroll 40s linear infinite;
+    display: flex;
+    width: calc(250px * 14);
+  }
+  .slider2 .slide2 {
+    height: 100px;
+    width: 250px;
+  }
+  
+
+/* ------------- collabration page end -------------- */
 
 /* ------------- footer page start -------------- */
 footer{
@@ -604,7 +613,7 @@ footer{
     position: relative;
     width: 100%;
     height: 100%;
-    top:350px;
+    top:100px;
     border-top-left-radius: 70px;
     font-size: 0.8rem;
   }
